[package]
name = "grep-rust"
version = "0.1.0"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
thiserror = "1.0.38"                             # error handling

[[bin]]
name = "your_program"
path = "src/main.rs"